--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -36,7 +36,7 @@
   }
 }
 
-.social-links {
+.social {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -58,7 +58,7 @@
   }
 }
 
-.back-to-top i {
+.top i {
   color: $white-color;
   margin: 1rem 0 $default-font-size;
   transition: all 0.2s ease-in;
